--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^6.10.0",
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
+    "find-config": "^1.0.0",
     "html-webpack-plugin": "^5.6.0",
     "jquery": "^3.7.1",
+    "node-polyfill-webpack-plugin": "^4.0.0",
+    "path": "^0.12.7",
     "postcss-loader": "^8.1.0",
+    "stream": "^0.0.2",
     "style-loader": "^3.3.4",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
